--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -188,7 +188,7 @@ $(function() {
                             <!-- -->
                             <div class="box_line year{%if (app.session.get('carAge')) or app.session.get('carModel') %} focus{% endif %}"{%if (app.session.get('carAge')) is null and app.session.get('carModel') is null %} style="display:none;"{% endif %}>
                                 <div class="fixed_pop_up">
-                                    Выберите год выпуска Вашего автомобиля. Вы получаете скидку Бонус-Малус, если Ваш автомобиль старше 1 года.
+                                    Выберите год выпуска Вашего автомобиля. Вы получаете скидку от 3% до 25% в зависимости от возраста автомобиля.
                                 </div>
                                 <div class="param_name">Год выпуска:</div>
                                 <ul form-input-id="carAge" class="list" id="carAgeList">
