--- a/path/src/Insurance/ContentBundle/Resources/views/Default/osago-info.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/osago-info.html.twig
@@ -107,7 +107,7 @@
 					<br/><br/>
 					Данный вид страхования является добровольным и включает в себя такие страховые случаи, как тяжкие телесные повреждения и смерть. 
 					<br/><br/>
-					Стоимость оформления полиса зависит от количества застрахованных и срока его действия. 
+					Стоимость оформления полиса зависит от количества застрахованных, страховой суммы для каждого и срока действия договора. 
 					</p>
             </div>
         </div>
