--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -30,7 +30,7 @@
                             {{(app.session.get('price') + app.session.get('priceDGO') + app.session.get('priceNs'))|number_format(2, ',', ' ')}} грн.
                             <div class="question_ico">
                                 <div class="pop_up_total">
-                                    Это общая сумма Вашего заказа, в т.ч. скидка, если возраст Вашего автомобиля больше 1 года.
+                                    Это общая сумма Вашего заказа, включая дополнительные опции и скидку.
                                 </div>
                             </div>
                         </div>
