--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/delayedOrderNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/delayedOrderNotification.html.twig
@@ -2,7 +2,7 @@
 
 <p>Прежде всего позвольте выразить Вам свою благодарность за оказанное доверие нашему сервису.</p>
 
-<p><b>Вы еще не завершили заказ на сайте на PolisMarket.</b></p>
+<p><b>Вы не завершили заказ на сайте на PolisMarket.</b></p>
 
 <div style="background-color: #EBFFE2; padding:10px 20px 10px 20px; margin-bottom:20px; color:#363636; border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -khtml-border-radius: 5px;">
 <p><b>Детальная информация по заказу:</b></p>
