--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -155,7 +155,7 @@
                 <div class="social_buttons">
 				    <a href="" class="tw"></a>
 				    <a href="" class="fb"></a>
-                    <a href="" class="vk"></a>
+                    <a href="https://vk.com/polismarket" class="vk" title="Мы в Вконтакте"></a>
 					</div>
                     <div style="clear: both;"></div>
 					</div>
