disable online payment

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -421,7 +421,7 @@ $(function() {
                                         Страхование здоровья водителя и пассажиров
                                         <div class="question_ico">
                                           <div class="pop_up">
-                                            <div class="popup_title">Личная безопастность</div>
+                                            <div class="popup_title">Личная безопасность</div>
                                             Страхование от несчастного случая - это добровольный вид страхования, цель которого возместить водителю и пассажирам убытки, связанные со здоровьем, на случай ДТП. Вам нужно выбрать количество страхуемых пассажиров помимо водителя и страховую сумму для каждого.
 											<a href="{{path('osago-info')}}">Подробнее</a>
                                           </div>
