--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
@@ -154,23 +154,23 @@
                                     <div id="cash" class="ico cash"></div>
                                     <div class="text"><b>Наличными</b> курьеру</div>
                                 </div>
-                                <div class="payment_point{% if app.session.get('payType') == 'plastic'%} current{%endif%}">
+                                <div class="payment_point{% if app.session.get('payType') == 'plastic'%} current{%endif%} none">
                                     <div id="plastic" class="ico plastic"></div>
                                     <div class="text"><b>Пластиковая</b> карта</div>
                                 </div>
-                                <div class="payment_point{% if app.session.get('payType') == 'privat_card'%} current{%endif%}">
+                                <div class="payment_point{% if app.session.get('payType') == 'privat_card'%} current{%endif%} none">
                                     <div id="privat_card" class="ico privat_card"></div>
                                     <div class="text"><b>Карта</b> Приват Банка</div>
                                 </div>
-                                <div class="payment_point{% if app.session.get('payType') == 'privat24'%} current{%endif%}">
+                                <div class="payment_point{% if app.session.get('payType') == 'privat24'%} current{%endif%} none">
                                     <div id="privat24" class="ico privat24"></div>
                                     <div class="text"><b>Приват 24</b></div>
                                 </div>
-                                <div class="payment_point{% if app.session.get('payType') == 'terminal' %} current{%endif%}">
+                                <div class="payment_point{% if app.session.get('payType') == 'terminal' %} current{%endif%} none">
                                     <div id="terminal" class="ico terminal"></div>
                                     <div class="text"><b>Терминалы</b> оплаты</div>
                                 </div>
-                                <div class="payment_point{% if app.session.get('payType') == 'webmoney'%} current{%endif%}">
+                                <div class="payment_point{% if app.session.get('payType') == 'webmoney'%} current{%endif%} none">
                                     <div id="webmoney" class="ico webmoney"></div>
                                     <div class="text"><b>Webmoney</b></div>
                                 </div>
@@ -183,11 +183,11 @@
                                 <div class="price">{{(app.session.get('price') + app.session.get('priceDGO')+ app.session.get('priceNs'))|number_format(2, ',', ' ')}} грн.</div>
                             </div>
                             <!-- buttons -->
-                            <div class="pay_now"{% if <!--app.session.get('payType') == 'terminal' or -->app.session.get('payType') == 'cash' or app.session.get('payType') is null %} style="display: none;"{% endif %}>
+                            <div class="pay_now"{% if app.session.get('payType') == 'terminal' or app.session.get('payType') == 'cash' or app.session.get('payType') is null %} style="display: none;"{% endif %}>
                                 <!--<div class="form_green_button success_link">Оплатить сейчас</div>-->
                                 <div class="form_grey_button error_link">! Онлайн оплата временно недоступна. Пожалуйста, выберите, оплату наличными.</div>
                             </div>
-                            <div class="pay_later"{% if <!--app.session.get('payType') != 'terminal' and -->app.session.get('payType') != 'cash' and app.session.get('payType') is not null %} style="display: none;"{% endif %}>
+                            <div class="pay_later"{% if app.session.get('payType') != 'terminal' and app.session.get('payType') != 'cash' and app.session.get('payType') is not null %} style="display: none;"{% endif %}>
                                 <div class="form_green_button">Подтвердить заказ</div>
                                 <div class="form_grey_button">Отложить решение</div>
                             </div>
