--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
@@ -227,16 +227,16 @@
     }
     $('#region').on('dataavailable', loadCities);
     $('#regionList li').on('click', selectCity);
-    $('.payment_point').bind('click', function (){
-        $('#payType').val($(this).find('.ico').attr('id'));
-        if ($(this).find('.ico').attr('id') == 'cash' || $(this).find('.ico').attr('id') == 'terminal') {
-            $('.pay_now').hide();
-            $('.pay_later').show();
-        } else {
-            $('.pay_now').show();
-            $('.pay_later').hide();
-        }
-    });
+    //$('.payment_point').bind('click', function (){
+        //$('#payType').val($(this).find('.ico').attr('id'));
+        //if ($(this).find('.ico').attr('id') == 'cash' || $(this).find('.ico').attr('id') == 'terminal') {
+            //$('.pay_now').hide();
+            //$('.pay_later').show();
+        //} else {
+            //$('.pay_now').show();
+            //$('.pay_later').hide();
+        //}
+    //});
 
     function checkForm() {
         var errors = {};
