footer wm images

--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -167,7 +167,7 @@
             <div class="limit">
                 <a href="" class="footer_logo"></a>
                 <div class="copyright">© 2013 ПолисМаркет<br />Все права защищены законом</div>
-                <div class="counter_container"><span class="privat24"></span><span class="webmoney"></span><span class="visa_master"></span></div>
+                <div class="counter_container"><span class="webmoney1"></span><span class="webmoney2"></span><span class="privat24"></span><span class="visa_master"></span></div>
                 <div style="clear: both;"></div>
             </div>
          </div>
