--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -67,6 +67,7 @@
   ga('send', 'pageview');
 
 </script>
+ <META NAME="webmoney.attestation.label" CONTENT="webmoney attestation label#9281E564-0B77-4068-BFAB-C68F62843056" /> 
 </head>
 
 
